# rfalco

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  draft-ietf-cose-falcon-04.txt  rust-toolchain.toml  rustfmt.toml
examples/: sampler_diag.rs
src/: codec.rs  cose.rs  drbg.rs  fft.rs  field.rs  keygen.rs  lib.rs  ntt.rs  params.rs  sampler.rs  shake.rs  sign.rs  verify.rs
src/fft/: mod.rs  tables.rs
src/ntt/: mod.rs  tables.rs
tests/: ntt_kat.rs  shake256_kat.rs
tests/common/: ntt_testvec.rs
